start with server parsing
